Small improvement (hinted by IntelliJ)